--- a/resume.css
+++ b/resume.css
@@ -31,6 +31,29 @@
   margin-bottom: 110px;
 }
 
+.year {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.year ul {
+  padding-left: 10px;
+  margin-left: 10px;
+  border-left: 4px solid #443f3f;
+}
+
+.year:nth-child(1) ul {
+  border-color: #3bb2b8;
+}
+
+.year:nth-child(2) ul {
+  border-color: #3cafe1;
+}
+
+.year:nth-child(3) ul {
+  border-color: #5090e6;
+}
+
 .horizontal_list {
   margin: 0;
   padding: 0;
@@ -55,15 +78,11 @@
 .line_left,
 .line_right {
   border-top: 1px solid #434247;
-  width: 305px;
-  margin-top: 13px;
+  width: 700px;
+  margin-top: 10px;
+  margin-left: 0px;
 }
-.line_left {
-  float: left;
-}
-.line_right {
-  float: right;
-}
+
 .left_circle,
 .central_circle,
 .right_circle {
@@ -94,7 +113,7 @@
 /* Main tags */
 
 body {
-  background-color: #333;
+  background-color: #242627;
   margin: 0;
 }
 
@@ -153,12 +172,12 @@ li {
   padding-left: 1em;
   text-indent: -0.7em;
 }
-li:before {
+/* li:before {
   content: "• ";
   color: #837c9a;
   font-size: 20px;
   padding-right: 8px;
-}
+} */
 
 /* Containers size */
 
@@ -228,7 +247,7 @@ li:before {
   font-style: italic;
   line-height: 45px;
   padding: 16px 17px;
-  background: #353638;
+  background: #0c2b43;
 }
 .download_print_buttons a:hover {
   background: #020609;
@@ -284,7 +303,7 @@ li:before {
   width: 210px;
   height: 240px;
   margin: 10px;
-  background: url(https://i.imgur.com/kk3CIuV.jpg) 100% /210px no-repeat;
+  background: url(https://i.imgur.com/kk3CIuV.jpg) 110% /210px no-repeat;
 }
 
 .hello_content,
@@ -323,8 +342,7 @@ li:before {
   width: 30px;
   height: 30px;
   z-index: 9;
-  background: url(https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png)
-    repeat;
+  background: #242627 repeat;
   transform: rotate(45deg);
 }
 .cut2:before {
@@ -335,8 +353,7 @@ li:before {
   width: 30px;
   height: 30px;
   z-index: 9;
-  background: url(https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png)
-    repeat;
+  background: #242627 repeat;
   transform: rotate(45deg);
 }
 .content {
@@ -393,8 +410,8 @@ li:before {
 .social_icons .linkedin:hover {
   background: #007bb6;
   color: #fff;
-  border-top-right-radius: 50px;
-  border-bottom-left-radius: 50px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .footer_name {
